Updates on the transactions
